src/test/resources/regression/frontends/error/simple/ConvertBigInt.scala
/* Copyright 2009-2015 EPFL, Lausanne */

object ConvertBigInt {

  def safeInt(x: Int): BigInt = x

}
